Autoplay for splash?!

--- a/data_blitz/index.Rmd
+++ b/data_blitz/index.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 <!-- Databrary splash loop -->
 <div class="centered">
-<video width="900" controls autoplay loop>
+<video width="900" controls data-autoplay loop>
   <source src="../mov/databrary-splash.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
